@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-compliance</artifactId>
-		<version>4.1.1-SNAPSHOT</version>
+		<version>1.0M1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-rio-compliance</artifactId>
@@ -43,13 +43,13 @@
 			<artifactId>rdf4j-rio-datatypes</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rdf4j-rio-languages</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rdf4j-rio-rdfxml</artifactId>
@@ -136,12 +136,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<argLine>-Xmx512M -XX:MaxPermSize=256M</argLine>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
 					<excludes>
 						<exclude>**/N3ParserTest.java</exclude>
 						<exclude>**/TestServer.java</exclude>
@@ -155,13 +149,13 @@
 							<goal>integration-test</goal>
 						</goals>
 					</execution>
-                                        <execution>
-                                                <id>verify</id>
-                                                <phase>verify</phase>
-                                                <goals>
-                                                        <goal>verify</goal>
-                                                </goals>
-                                        </execution>
+					<execution>
+						<id>verify</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
